updated descriptions - signed-off-by: trimstray <trimstray@gmail.com>

--- a/doc/man8/otseca.8
+++ b/doc/man8/otseca.8
@@ -2,11 +2,11 @@
 .\" Contact trimstray@gmail.com.
 .TH man 8 "29.05.2018" "1.0.0" "otseca man page"
 .SH NAME
-otseca \- search and dump system configuration.
+otseca \- open source security auditing tool
 .SH SYNOPSIS
 otseca <option|long-option>
 .SH DESCRIPTION
-otseca is a open source tool to search and dump system configuration.
+Otseca is a open source security auditing tool to search and dump system configuration. Generates html format reports.
 .SH OPTIONS
 --help
         show this message
