added verbose mode, minor fixes - signed-off-by: trimstray <trimstray@gmail.com>

--- a/doc/man8/otseca.8
+++ b/doc/man8/otseca.8
@@ -10,6 +10,8 @@ Otseca is a open source security auditing tool to search and dump system configu
 .SH OPTIONS
 --help
         show this message
+--verbose
+        displays 'info' messages on the screen (verbose mode)
 .SH SEE ALSO
 https://github.com/trimstray/otseca
 .SH BUGS
