--- a/doc/man8/otseca.8
+++ b/doc/man8/otseca.8
@@ -12,6 +12,8 @@ Otseca is a open source security auditing tool to search and dump system configu
         show this message
 --verbose
         displays 'info' messages on the screen (verbose mode)
+--ignore-failed
+        do not exit with nonzero on commands failed
 .SH SEE ALSO
 https://github.com/trimstray/otseca
 .SH BUGS
