minor fixes and updates, added --format param - signed-off-by: trimstray <trimstray@gmail.com>

--- a/doc/man8/otseca.8
+++ b/doc/man8/otseca.8
@@ -10,6 +10,8 @@ Otseca is a open source security auditing tool to search and dump system configu
 .SH OPTIONS
 --help
         show this message
+--format
+        set output format (html/raw-html)
 --ignore-failed
         do not exit with nonzero on commands failed
 .SH SEE ALSO
