updated _help_ and man page: -t|--task param - signed-off-by: trimstray <trimstray@gmail.com>

--- a/doc/man8/otseca.8
+++ b/doc/man8/otseca.8
@@ -10,8 +10,11 @@ Otseca is a open source security auditing tool to search and dump system configu
 .SH OPTIONS
 --help
         show this message
---format
-        set output format (html/raw-html)
+-f|--format <key>
+        set output format (key: html/raw-html)
+-t|--tasks <key>
+        set specific task to do
+        (key: system, fs, permissions, services, network, other)
 --ignore-failed
         do not exit with nonzero on commands failed
 .SH SEE ALSO
