added --show-errors param - signed-off-by: trimstray <trimstray@gmail.com>

--- a/doc/man8/otseca.8
+++ b/doc/man8/otseca.8
@@ -15,6 +15,8 @@ Otseca is a open source security auditing tool to search and dump system configu
 -t|--tasks <key>
         set specific task to do
         (key: system, fs, permissions, services, network, other)
+--show-errors
+        show stderr to output
 --ignore-failed
         do not exit with nonzero on commands failed
 .SH SEE ALSO
