removed filesystem stack, minor updates - signed-off-by: trimstray <trimstray@gmail.com>

--- a/doc/man8/otseca.8
+++ b/doc/man8/otseca.8
@@ -14,7 +14,7 @@ Otseca is a open source security auditing tool to search and dump system configu
         set output format (key: html/raw-html)
 -t|--tasks <key>
         set specific task to do
-        (key: system, fs, permissions, services, network, external)
+        (key: system, permissions, services, network, external)
 --show-errors
         show stderr to output
 --ignore-failed
