--- a/doc/man8/otseca.8
+++ b/doc/man8/otseca.8
@@ -15,6 +15,8 @@ Otseca is a open source security auditing tool to search and dump system configu
 -t|--tasks <key>
         set specific task to do
         (key: system, kernel, permissions, services, network, external)
+-o|--output <path>
+        set path to output directory report
 --show-errors
         show stderr to output
 --ignore-failed
