updated --task param: distro - signed-off-by: trimstray <trimstray@gmail.com>

--- a/doc/man8/otseca.8
+++ b/doc/man8/otseca.8
@@ -1,6 +1,6 @@
 .\" Manpage for otseca.
 .\" Contact trimstray@gmail.com.
-.TH man 8 "29.05.2018" "1.0.4" "otseca man page"
+.TH man 8 "29.05.2018" "1.0.5" "otseca man page"
 .SH NAME
 otseca \- open source security auditing tool
 .SH SYNOPSIS
@@ -14,7 +14,7 @@ Otseca is a open source security auditing tool to search and dump system configu
         set output format (key: html/raw-html)
 -t|--tasks <key>
         set specific task to do
-        (key: system, kernel, permissions, services, network, external)
+        (key: system, kernel, permissions, services, network, distro, external)
 -o|--output <path>
         set path to output directory report
 --show-errors
